--- a/FoodOrderingSystem/App.config
+++ b/FoodOrderingSystem/App.config
@@ -12,6 +12,12 @@
         <add name="FoodOrderingSystem.My.MySettings.CalculationConnectionString"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Calculation.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="FoodOrderingSystem.My.MySettings.memberRegistrationConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\memberRegistration.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="FoodOrderingSystem.My.MySettings.staffConnectionString"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\staff.mdf;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
